add Python 3.11+ requirement to onboarding, add welcome.bat script and welcome.mdc rules

--- a/email_preview.html
+++ b/email_preview.html
@@ -33,8 +33,11 @@
                                 <tr>
                                     <td style="padding: 20px;">
                                         <h2 style="margin: 0 0 15px; color: #111827; font-size: 18px; font-weight: 600;">📋 Before You Start</h2>
-                                        <p style="margin: 0 0 10px; color: #6b7280; font-size: 14px;">You'll need accounts on these platforms:</p>
-                                        <ul style="margin: 0; padding-left: 20px; color: #6b7280; font-size: 14px; line-height: 1.8;">
+                                        <p style="margin: 0 0 10px; color: #6b7280; font-size: 14px;">
+                                            <strong style="color:#dc2626;">Step 1: Install Python 3.11 or later</strong><br>
+                                            Download from <a href="https://www.python.org/downloads/" style="color:#6366f1;">python.org/downloads</a> and <strong>add to PATH</strong> during install. Verify in Terminal: <code style="background:#f3f4f6;padding:3px;border-radius:3px;">python --version</code> (should show Python 3.11+).
+                                        </p>
+                                        <ul style="margin: 15px 0;padding-left: 20px;color: #6b7280; font-size: 14px; line-height: 1.8;">
                                             <li><strong>GitHub</strong> - Code repository (required)</li>
                                             <li><strong>Azure</strong> - Cloud hosting (required)</li>
                                             <li><strong>OpenAI</strong> - AI API (required)</li>
